ajustando processos no databricks

--- a/Databricks/bronze/agrupar_dados.ipynb
+++ b/Databricks/bronze/agrupar_dados.ipynb
@@ -5,6 +5,54 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "728ff4dd-fc05-43fa-a174-daec935a1cbb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import StructType, StructField, StringType\n",
+    "from pyspark.sql.functions import input_file_name, count, when, col, lit, max,row_number\n",
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql import SparkSession"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b9c62f5d-804b-40c9-a4ad-15c36e8ad136",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 1. Definir o esquema manualmente\n",
+    "json_schema = StructType([\n",
+    "    StructField(\"codigo\", StringType(), True),\n",
+    "    StructField(\"data\", StringType(), True),\n",
+    "    StructField(\"desconto\", StringType(), True),\n",
+    "    StructField(\"link\", StringType(), True),\n",
+    "    StructField(\"nome\", StringType(), True),\n",
+    "    StructField(\"parcelamento\", StringType(), True),\n",
+    "    StructField(\"preco\", StringType(), True)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -18,90 +66,62 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import StructType, StructField, StringType\n",
-    "from pyspark.sql.functions import input_file_name, count, when, col, lit\n",
-    "\n",
-    "# 1. Definir o esquema manualmente\n",
-    "json_schema = StructType([\n",
-    "    StructField(\"codigo\", StringType(), True),\n",
-    "    StructField(\"data\", StringType(), True),\n",
-    "    StructField(\"desconto\", StringType(), True),\n",
-    "    StructField(\"link\", StringType(), True),\n",
-    "    StructField(\"nome\", StringType(), True),\n",
-    "    StructField(\"parcelamento\", StringType(), True),\n",
-    "    StructField(\"preco\", StringType(), True)\n",
-    "])\n",
-    "\n",
     "# Caminho para a pasta que contém os arquivos JSON\n",
-    "json_folder_path = \"/Volumes/nintendodatabricks037cbq_workspace/nintendo/inbound/*.json\"\n",
-    "\n",
+    "json_folder_path = \"/Volumes/nintendodatabricksplgwf5_workspace/nintendo/inbound/*.json\"\n",
     "\n",
     "print(f\"Tentando ler arquivos JSON de: {json_folder_path}\")\n",
     "\n",
     "try:\n",
-    "    # --- Leitura dos arquivos JSON ---\n",
-    "    # Adicionando a opção pathGlobFilter para garantir que apenas .json sejam lidos explicitamente\n",
+    "    # Iniciando a leitura dos arquivos json\n",
+    "    # .option(\"multiLine\", \"true\") = Se o arquivo json possuir uma array com várias linhas, será lido como um todo\n",
+    "    # .option(\"mode\", \"PERMISSIVE\") = Continua lendo os arquivos JSON mesmo que encontre erros de formatação ou dados que não se encaixam no schema pré definido\n",
+    "    # .option(\"columnNameOfCorruptRecord\", \"_corrupt_record\") = Adicionando a opção pathGlobFilter para garantir que apenas .json sejam lidos explicitamente\n",
+    "    # .withColumn(\"file_source\", input_file_name()) = Adicionando o  nome do caminho de cada arquivo lido em uma coluna\n",
     "    df_json_unificado = spark.read \\\n",
     "                             .option(\"multiLine\", \"true\") \\\n",
     "                             .option(\"mode\", \"PERMISSIVE\") \\\n",
     "                             .option(\"columnNameOfCorruptRecord\", \"_corrupt_record\") \\\n",
     "                             .schema(json_schema) \\\n",
     "                             .json(json_folder_path) \\\n",
-    "                             .withColumn(\"file_source\", input_file_name()) # Adiciona coluna com o caminho do arquivo\n",
+    "                             .withColumn(\"file_source\", input_file_name()) \n",
     "\n",
     "    print(\"\\n--- Esquema do DataFrame unificado ---\")\n",
     "    df_json_unificado.printSchema()\n",
     "\n",
-    "    # --- 1. Verificação de Arquivos Lidos vs. Arquivos Esperados ---\n",
-    "    # Contar quantos arquivos foram realmente processados pelo Spark\n",
+    "    # --- 1 Etapa de Qualidade. Verificação de Arquivos Lidos vs. Arquivos Esperados ---\n",
+    "    # Usando dbutils para listar arquivos no DBFS\n",
+    "    all_files_in_dir = dbutils.fs.ls(\"dbfs:/FileStore/\")\n",
+    "    expected_json_files = [f for f in all_files_in_dir if f.name.endswith(\".json\")]\n",
+    "    # Contar quantos arquivos .json existem na pasta\n",
+    "    num_expected_files = len(expected_json_files)\n",
+    "\n",
+    "    # Contar quantos arquivos foram realmente processados pela aplicação a partir da coluna criada com o nome de cada arquivo lido\n",
     "    files_processed_df = df_json_unificado.select(\"file_source\").distinct().count()\n",
-    "    processed_file_paths = [row.file_source for row in df_json_unificado.select(\"file_source\").distinct().collect()]\n",
-    "\n",
-    "    # Para obter o número de arquivos esperados diretamente de um Volume,\n",
-    "    # a melhor prática é usar a API do Spark para listar os arquivos, já que ela entende os caminhos de Volumes.\n",
-    "    try:\n",
-    "        # Pega a parte da pasta do json_folder_path (removendo \"/*.json\")\n",
-    "        base_folder_path = json_folder_path.replace(\"/*.json\", \"\")\n",
-    "        # Lista os arquivos .json na pasta usando Spark para compatibilidade com Volumes\n",
-    "        # Isso cria um DataFrame com o caminho de cada arquivo\n",
-    "        expected_json_files_df = spark.read.format(\"binaryFile\") \\\n",
-    "                                            .option(\"pathGlobFilter\", \"*.json\") \\\n",
-    "                                            .load(base_folder_path) \\\n",
-    "                                            .select(\"path\")\n",
-    "\n",
-    "        num_expected_files = expected_json_files_df.count()\n",
-    "        expected_file_paths_spark = [row.path for row in expected_json_files_df.collect()]\n",
-    "\n",
-    "    except Exception as e_list:\n",
-    "        print(f\"Não foi possível listar arquivos usando Spark no caminho '{base_folder_path}': {e_list}\")\n",
-    "        print(\"Prosseguindo com a contagem apenas dos arquivos processados pelo DataFrame.\")\n",
-    "        num_expected_files = -1 # Indica que não foi possível obter o número esperado\n",
-    "        expected_file_paths_spark = []\n",
-    "\n",
     "\n",
     "    print(f\"\\n--- Verificação de Arquivos ---\")\n",
-    "    if num_expected_files != -1:\n",
-    "        print(f\"Número de arquivos .json esperados na pasta '{base_folder_path}': {num_expected_files}\")\n",
-    "    else:\n",
-    "        print(f\"Não foi possível determinar o número esperado de arquivos .json na pasta '{base_folder_path}'.\")\n",
+    "    print(f\"Número de arquivos .json esperados na pasta '{json_folder_path.replace('/*.json', '')}': {num_expected_files}\")\n",
     "    print(f\"Número de arquivos únicos processados no DataFrame: {files_processed_df}\")\n",
     "\n",
-    "    if num_expected_files != -1 and files_processed_df == num_expected_files:\n",
+    "    if files_processed_df == num_expected_files:\n",
     "        print(\"STATUS: OK - Todos os arquivos JSON esperados foram processados.\")\n",
-    "    elif num_expected_files != -1 and files_processed_df != num_expected_files:\n",
+    "    else:\n",
     "        print(\"STATUS: ALERTA - O número de arquivos processados difere do esperado. Investigue!\")\n",
     "        # Para identificar quais arquivos podem ter sido ignorados:\n",
-    "        missing_files = [path for path in expected_file_paths_spark if path not in processed_file_paths]\n",
+    "        processed_file_paths = [row.file_source for row in df_json_unificado.select(\"file_source\").distinct().collect()]\n",
+    "        expected_file_paths = [f.path for f in expected_json_files]\n",
+    "\n",
+    "        # Encontrar arquivos esperados que não foram processados\n",
+    "        missing_files = [path for path in expected_file_paths if path not in processed_file_paths]\n",
     "        if missing_files:\n",
     "            print(f\"Arquivos JSON esperados que não foram encontrados no DataFrame: {missing_files}\")\n",
-    "    else:\n",
-    "        print(\"STATUS: INCONCLUSIVO - Não foi possível comparar o número de arquivos esperados com os processados.\")\n",
     "\n",
-    "    # --- 2. Contagem de Registros ---\n",
+    "    # --- 2 Etapa de Qualidade. Contagem de Registros ---\n",
+    "    #Contar quantidade de linhas no dataframe processado\n",
     "    total_records_loaded = df_json_unificado.count()\n",
     "    print(f\"\\n--- Verificação de Registros ---\")\n",
     "    print(f\"Total de registros carregados no DataFrame: {total_records_loaded}\")\n",
     "\n",
+    "    #verificação\n",
     "    if total_records_loaded == 0 and num_expected_files > 0:\n",
     "        print(\"STATUS: ALERTA - Nenhum registro foi carregado, mas há arquivos JSON esperados. Verifique se os arquivos estão vazios ou malformados.\")\n",
     "    elif total_records_loaded > 0:\n",
@@ -148,12 +168,9 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "0a3493f4-d6e3-45b2-9d2a-0ca860ce8eac",
+     "nuid": "8ac7d013-82dc-4464-b20a-4fde03082c6b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -161,20 +178,106 @@
    },
    "outputs": [],
    "source": [
-    "# Certifique-se de que df_json_unificado esteja disponível após as etapas anteriores\n",
+    "def last_partition_delta(nome_tabela, coluna_particao):\n",
+    "\n",
+    "    spark = SparkSession.builder.getOrCreate()\n",
+    "    \n",
+    "    try:\n",
+    "        df = spark.read.format(\"delta\").load(nome_tabela)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Erro ao acessar a tabela '{nome_tabela}': {e}\")\n",
+    "        return spark.createDataFrame([], schema=df.schema if 'df' in locals() else [])\n",
+    "\n",
+    "    ultima_particao_df = df.select(max(coluna_particao).alias(\"ultima_particao\"))\n",
+    "    ultima_particao = ultima_particao_df.first()[\"ultima_particao\"] if ultima_particao_df.first() else None\n",
+    "\n",
+    "    if ultima_particao is not None:\n",
+    "        filtro = f\"{coluna_particao} = '{ultima_particao}'\"\n",
+    "        df_ultima_particao = df.where(filtro)\n",
+    "        print(f\"Tabela '{nome_tabela}' filtrada pela última partição: {ultima_particao}\")\n",
+    "\n",
+    "        qtd = df_ultima_particao.count()\n",
+    "\n",
+    "        assert qtd > 0, f\"A última partição '{ultima_particao}' da tabela '{nome_tabela}' está vazia.\"\n",
+    "        \n",
+    "        print(f\"Leitura da tabela '{nome_tabela}' carregada com sucesso. Número de linhas: {qtd}\")\n",
+    "\n",
+    "        return df_ultima_particao\n",
+    "    else:\n",
+    "        print(f\"Não foram encontradas partições na tabela '{nome_tabela}'.\")\n",
+    "        return spark.createDataFrame([], schema=df.schema)\n",
+    "\n",
+    "# Caminho para a external location do diretório bronze\n",
+    "bronze_path = f\"/Volumes/nintendodatabricksplgwf5_workspace/nintendo/bronze\"\n",
+    "\n",
+    "# Lendo arquivo Delta do diretório bronze pela ultima partição\n",
+    "df_old = last_partition_delta(bronze_path, \"data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ec59ae87-77f4-429f-871a-fe4a73bf5f81",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_new_tagged = df_json_unificado.withColumn(\"source\", lit(\"new\"))\n",
+    "df_old_tagged = df_old.withColumn(\"source\", lit(\"old\"))\n",
+    "\n",
+    "df_combined = df_new_tagged.unionByName(df_old_tagged)\n",
+    "\n",
+    "window_spec = Window.partitionBy(\"codigo\").orderBy(col(\"data\").desc())\n",
+    "\n",
+    "# Adicionar um número de linha dentro de cada partição\n",
+    "df_ranked = df_combined.withColumn(\"row_num\", row_number().over(window_spec))\n",
+    "\n",
+    "# Filtrar para manter apenas a primeira linha (a mais recente) para cada código\n",
+    "df_result = df_ranked.filter(col(\"row_num\") == 1).drop(\"row_num\", \"source\")\n",
+    "\n",
+    "# 1. Encontrar a maior data no DataFrame\n",
+    "maior_data = df_result.select(max(\"data\")).collect()[0][0]\n",
+    "\n",
+    "# 2. Filtrar o DataFrame para mostrar apenas as linhas com a maior data\n",
+    "df_maior_data = df_result.filter(col(\"data\") == maior_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cb823e50-f121-46b6-ab04-fcc0a9a11f2f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Certifique-se de que df_maior_data esteja disponível após as etapas anteriores\n",
     "\n",
     "# Caminho de destino para a tabela Delta\n",
-    "delta_table_path = \"/Volumes/nintendodatabricks037cbq_workspace/nintendo/bronze\"\n",
+    "delta_table_path = \"/Volumes/nintendodatabricksplgwf5_workspace/nintendo/bronze\"\n",
     "\n",
     "print(f\"Iniciando o salvamento do DataFrame no formato Delta em: {delta_table_path}\")\n",
     "\n",
     "try:\n",
     "    # --- Passo 1: Obter a contagem de linhas ANTES de salvar ---\n",
-    "    num_rows_to_save = df_json_unificado.count()\n",
+    "    num_rows_to_save = df_maior_data.count()\n",
     "    print(f\"Número de linhas no DataFrame a ser salvo: {num_rows_to_save}\")\n",
     "\n",
     "    # --- Passo 2: Salvar o DataFrame no formato Delta ---\n",
-    "    df_json_unificado.write \\\n",
+    "    df_maior_data.write \\\n",
     "                     .format(\"delta\") \\\n",
     "                     .mode(\"overwrite\") \\\n",
     "                     .partitionBy(\"data\") \\\n",
