subindo incremental bronze

--- a/Databricks/bronze/agrupar_dados.ipynb
+++ b/Databricks/bronze/agrupar_dados.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.types import StructType, StructField, StringType\n",
-    "from pyspark.sql.functions import input_file_name, count, when, col, lit, max,row_number\n",
+    "from pyspark.sql.functions import input_file_name, count, when, col, lit, max,row_number, date_format\n",
     "from pyspark.sql.window import Window\n",
     "from pyspark.sql import SparkSession"
    ]
@@ -36,10 +36,10 @@
    },
    "outputs": [],
    "source": [
-    "# 1. Definir o esquema manualmente\n",
+    "# Definando o schema da estrutura json\n",
     "json_schema = StructType([\n",
     "    StructField(\"codigo\", StringType(), True),\n",
-    "    StructField(\"data\", StringType(), True),\n",
+    "    StructField(\"extract\", StringType(), True),\n",
     "    StructField(\"desconto\", StringType(), True),\n",
     "    StructField(\"link\", StringType(), True),\n",
     "    StructField(\"nome\", StringType(), True),\n",
@@ -53,12 +53,9 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "42897d1b-d7d1-49f5-abd3-46e7a775501a",
+     "nuid": "b0329d00-2a62-4321-a1c5-e699e82b4543",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -170,7 +167,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "8ac7d013-82dc-4464-b20a-4fde03082c6b",
+     "nuid": "e7ea0766-70d7-4e55-a847-3ec14432239c",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -186,7 +183,7 @@
     "        df = spark.read.format(\"delta\").load(nome_tabela)\n",
     "    except Exception as e:\n",
     "        print(f\"Erro ao acessar a tabela '{nome_tabela}': {e}\")\n",
-    "        return spark.createDataFrame([], schema=df.schema if 'df' in locals() else [])\n",
+    "        return spark.createDataFrame([], schema=json_schema)\n",
     "\n",
     "    ultima_particao_df = df.select(max(coluna_particao).alias(\"ultima_particao\"))\n",
     "    ultima_particao = ultima_particao_df.first()[\"ultima_particao\"] if ultima_particao_df.first() else None\n",
@@ -211,7 +208,7 @@
     "bronze_path = f\"/Volumes/nintendodatabricksplgwf5_workspace/nintendo/bronze\"\n",
     "\n",
     "# Lendo arquivo Delta do diretório bronze pela ultima partição\n",
-    "df_old = last_partition_delta(bronze_path, \"data\")"
+    "df_old = last_partition_delta(bronze_path, \"data_ref\")"
    ]
   },
   {
@@ -230,23 +227,35 @@
    "outputs": [],
    "source": [
     "df_new_tagged = df_json_unificado.withColumn(\"source\", lit(\"new\"))\n",
+    "df_new_tagged = df_new_tagged.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM\"))\n",
     "df_old_tagged = df_old.withColumn(\"source\", lit(\"old\"))\n",
     "\n",
     "df_combined = df_new_tagged.unionByName(df_old_tagged)\n",
     "\n",
-    "window_spec = Window.partitionBy(\"codigo\").orderBy(col(\"data\").desc())\n",
+    "# Contando ocorrências de cada linha\n",
+    "df_counts = df_combined.groupBy(\"codigo\",\"desconto\", \"parcelamento\", \"preco\").count()\n",
+    "df_counts = df_counts.select('codigo','count')\n",
+    "df_joined = df_combined.join(df_counts.select(\"codigo\", \"count\"), on=\"codigo\", how=\"left\")\n",
+    "\n",
+    "# Filtrando apenas as linhas que aparecem uma única vez\n",
+    "df_sem_duplicatas = df_joined.filter(col(\"count\") == 1).drop(\"count\")\n",
+    "\n",
+    "window_spec = Window.partitionBy(\"codigo\", \"desconto\", \"link\", \"nome\", \"parcelamento\", \"preco\").orderBy(col(\"extract\").desc())\n",
     "\n",
     "# Adicionar um número de linha dentro de cada partição\n",
-    "df_ranked = df_combined.withColumn(\"row_num\", row_number().over(window_spec))\n",
+    "df_ranked = df_sem_duplicatas.withColumn(\"row_num\", row_number().over(window_spec))\n",
     "\n",
     "# Filtrar para manter apenas a primeira linha (a mais recente) para cada código\n",
     "df_result = df_ranked.filter(col(\"row_num\") == 1).drop(\"row_num\", \"source\")\n",
     "\n",
+    "# Supondo que sua coluna de data se chame 'extract'\n",
+    "df_result = df_result.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM\"))\n",
+    "\n",
     "# 1. Encontrar a maior data no DataFrame\n",
-    "maior_data = df_result.select(max(\"data\")).collect()[0][0]\n",
+    "maior_data = df_result.select(max(\"extract\")).collect()[0][0]\n",
     "\n",
     "# 2. Filtrar o DataFrame para mostrar apenas as linhas com a maior data\n",
-    "df_maior_data = df_result.filter(col(\"data\") == maior_data)"
+    "df_maior_data = df_result.filter(col(\"extract\") == maior_data)"
    ]
   },
   {
@@ -256,7 +265,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "cb823e50-f121-46b6-ab04-fcc0a9a11f2f",
+     "nuid": "6484e767-5abb-42ab-ac62-4342fe2b8b19",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -264,8 +273,6 @@
    },
    "outputs": [],
    "source": [
-    "# Certifique-se de que df_maior_data esteja disponível após as etapas anteriores\n",
-    "\n",
     "# Caminho de destino para a tabela Delta\n",
     "delta_table_path = \"/Volumes/nintendodatabricksbuvkb4_workspace/nintendo/bronze\"\n",
     "\n",
@@ -279,11 +286,11 @@
     "    # --- Passo 2: Salvar o DataFrame no formato Delta ---\n",
     "    df_maior_data.write \\\n",
     "                     .format(\"delta\") \\\n",
-    "                     .mode(\"overwrite\") \\\n",
-    "                     .partitionBy(\"data\") \\\n",
+    "                     .mode(\"append\") \\\n",
+    "                     .partitionBy(\"data_ref\") \\\n",
     "                     .save(delta_table_path)\n",
     "\n",
-    "    print(f\"DataFrame salvo com sucesso como tabela Delta particionada por 'data' em: {delta_table_path}\")\n",
+    "    print(f\"DataFrame salvo com sucesso como tabela Delta particionada por 'extract' em: {delta_table_path}\")\n",
     "\n",
     "    # --- Início das Verificações de Qualidade Pós-Gravação ---\n",
     "\n",
@@ -339,10 +346,10 @@
     "        table_details_df = spark.sql(f\"DESCRIBE DETAIL delta.`{delta_table_path}`\")\n",
     "        partition_columns = table_details_df.select(\"partitionColumns\").collect()[0][0] # Pega o primeiro elemento da lista\n",
     "\n",
-    "        if \"data\" in partition_columns:\n",
-    "            print(f\"STATUS: OK - A tabela Delta está particionada pela coluna 'data'.\")\n",
+    "        if \"data_ref\" in partition_columns:\n",
+    "            print(f\"STATUS: OK - A tabela Delta está particionada pela coluna 'data_ref'.\")\n",
     "        else:\n",
-    "            print(f\"ALERTA: A tabela Delta NÃO parece estar particionada pela coluna 'data'. Partições encontradas: {partition_columns}\")\n",
+    "            print(f\"ALERTA: A tabela Delta NÃO parece estar particionada pela coluna 'data_ref'. Partições encontradas: {partition_columns}\")\n",
     "\n",
     "    except Exception as sql_e:\n",
     "        print(f\"ALERTA: Não foi possível obter detalhes da tabela Delta (verifique o log): {sql_e}\")\n",
