--- a/src/bronze/agrupar_dados.ipynb
+++ b/src/bronze/agrupar_dados.ipynb
@@ -251,7 +251,7 @@
     "def comparando_dados_incremental(df1, df2):\n",
     "\n",
     "    df_new_tagged = df1.withColumn(\"source\", lit(\"new\"))\n",
-    "    #df_new_tagged = df_new_tagged.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM-dd\"))\n",
+    "    df_new_tagged = df_new_tagged.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM-dd\"))\n",
     "    df_old_tagged = df2.withColumn(\"source\", lit(\"old\"))\n",
     "\n",
     "    df_combined = df_new_tagged.unionByName(df_old_tagged)\n",
