incluindo mascaramento de dados

--- a/src/normalize/tabelas-produtos.ipynb
+++ b/src/normalize/tabelas-produtos.ipynb
@@ -49,7 +49,8 @@
     "CREATE OR REPLACE TABLE `nintendodatabricksx9y9jj_workspace`.`nintendo`.`products` AS\n",
     "SELECT \n",
     "    DISTINCT codigo,\n",
-    "    nome,\n",
+    "    -- Mascarando o nome: pegando apenas os primeiros 30 caracteres\n",
+    "    SUBSTRING(nome, 1, 30) AS nome,\n",
     "    origem\n",
     "FROM `_sqldf`\n",
     "ORDER BY codigo"
@@ -68,7 +69,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4277645878876321,
+     "commandId": 8481874544517962,
      "dataframes": [
       "_sqldf"
      ]
