--- a/src/normalize/tabelas-detalhes.ipynb
+++ b/src/normalize/tabelas-detalhes.ipynb
@@ -53,7 +53,8 @@
     "    oled,\n",
     "    `lite`,\n",
     "    recomendacao,\n",
-    "    link\n",
+    "  -- Mascarando o link usando hash \n",
+    "    SHA2(link, 256) AS link\n",
     "\n",
     "FROM `_sqldf`\n",
     "ORDER BY codigo "
@@ -72,7 +73,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4277645878876326,
+     "commandId": 8481874544517961,
      "dataframes": [
       "_sqldf"
      ]
