--- a/src/bronze/agrupar_dados.ipynb
+++ b/src/bronze/agrupar_dados.ipynb
@@ -198,10 +198,27 @@
     "\n",
     "    spark = SparkSession.builder.getOrCreate()\n",
     "    \n",
+    "    spark = SparkSession.builder.getOrCreate()\n",
+    "    dbutils = DBUtils(spark) \n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        dbutils.fs.ls(nome_tabela)\n",
+    "        print(f\"Caminho '{nome_tabela}' existe. Tentando carregar como Delta.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"O caminho '{nome_tabela}' não existe ou não é acessível. Detalhe: {e}. Gerando um DataFrame vazio.\")\n",
+    "        return spark.createDataFrame([], schema=json_schema)\n",
+    "\n",
     "    try:\n",
     "        df = spark.read.format(\"delta\").load(nome_tabela)\n",
+    "        print(f\"Tabela Delta '{nome_tabela}' carregada com sucesso.\")\n",
     "    except Exception as e:\n",
-    "        print(f\"A tabela '{nome_tabela}' não existe. Gerando um DataFrame vazio. Detalhe do erro: {e}\")\n",
+    "\n",
+    "        print(f\"Erro ao carregar a tabela Delta '{nome_tabela}'. Provavelmente não é uma tabela Delta válida. Detalhe do erro: {e}\")\n",
+    "        return spark.createDataFrame([], schema=json_schema)\n",
+    "    \n",
+    "    if df.rdd.isEmpty():\n",
+    "        print(f\"Tabela '{nome_tabela}' foi carregada como Delta VÁLIDA, mas está completamente vazia. Retornando DataFrame vazio com o schema definido.\")\n",
     "        return spark.createDataFrame([], schema=json_schema)\n",
     "\n",
     "    ultima_particao_df = df.select(max(coluna_particao).alias(\"ultima_particao\"))\n",
@@ -250,9 +267,11 @@
    "source": [
     "def comparando_dados_incremental(df1, df2):\n",
     "\n",
-    "    df_new_tagged = df1.withColumn(\"source\", lit(\"new\"))\n",
-    "    df_new_tagged = df_new_tagged.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM-dd\"))\n",
+    "    if df2.rdd.isEmpty() == False:\n",
+    "        if \"data_ref\" not in df1.columns:\n",
+    "            df1 = df1.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM-dd\"))\n",
     "    df_old_tagged = df2.withColumn(\"source\", lit(\"old\"))\n",
+    "    df_new_tagged = df1.withColumn(\"source\", lit(\"new\"))\n",
     "\n",
     "    df_combined = df_new_tagged.unionByName(df_old_tagged)\n",
     "\n",
