ajustando caminho tabelas normalizadas

--- a/src/bronze/agrupar_dados.ipynb
+++ b/src/bronze/agrupar_dados.ipynb
@@ -21,7 +21,8 @@
     "from pyspark.sql.types import StructType, StructField, StringType\n",
     "from pyspark.sql.functions import input_file_name, count, when, col, lit, max,row_number, date_format\n",
     "from pyspark.sql.window import Window\n",
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.dbutils import DBUtils"
    ]
   },
   {
