mascaramento em metricas

--- a/src/normalize/tabelas-detalhes.ipynb
+++ b/src/normalize/tabelas-detalhes.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "df = spark.sql(\"\"\"\n",
     "SELECT * \n",
-    "FROM delta.`/Volumes/nintendodatabricksp1okle_workspace/nintendo/gold`\n",
+    "FROM delta.`/Volumes/nintendodatabrickspkjgt7_workspace/nintendo/gold`\n",
     "\"\"\")\n",
     "\n",
     "df.createOrReplaceTempView(\"_sqldf\")"
@@ -46,15 +46,14 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE TABLE `nintendodatabricksp1okle_workspace`.`nintendo`.details AS\n",
+    "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.details AS\n",
     "SELECT \n",
     "    DISTINCT codigo,\n",
     "    memoria,\n",
     "    oled,\n",
     "    `lite`,\n",
     "    recomendacao,\n",
-    "  -- Mascarando o link usando hash \n",
-    "    SHA2(link, 256) AS link\n",
+    "    link\n",
     "\n",
     "FROM `_sqldf`\n",
     "ORDER BY codigo "
@@ -73,7 +72,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8481874544517961,
+     "commandId": 7849376363535614,
      "dataframes": [
       "_sqldf"
      ]
