--- a/src/normalize/tabelas-produtos.ipynb
+++ b/src/normalize/tabelas-produtos.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "df = spark.sql(\"\"\"\n",
     "SELECT * \n",
-    "FROM delta.`/Volumes/nintendodatabricksp1okle_workspace/nintendo/gold`\n",
+    "FROM delta.`/Volumes/nintendodatabrickspkjgt7_workspace/nintendo/gold`\n",
     "\"\"\")\n",
     "\n",
     "df.createOrReplaceTempView(\"_sqldf\")"
@@ -46,11 +46,10 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE TABLE `nintendodatabricksp1okle_workspace`.`nintendo`.`products` AS\n",
+    "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.`products` AS\n",
     "SELECT \n",
     "    DISTINCT codigo,\n",
-    "    -- Mascarando o nome: pegando apenas os primeiros 30 caracteres\n",
-    "    SUBSTRING(nome, 1, 30) AS nome,\n",
+    "    nome,\n",
     "    origem\n",
     "FROM `_sqldf`\n",
     "ORDER BY codigo"
@@ -69,7 +68,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5145144789635172,
+     "commandId": 7849376363535620,
      "dataframes": [
       "_sqldf"
      ]
